# ai-core-rag-local

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/api/: routes.py
app/application/: llm_service.py  pipelines_service.py  rag_service.py
app/core/: config.py
app/domain/: interfaces.py  models.py  services.py
app/infrastructure/: db.py  llm_local.py  llm_openai.py  memory.py  vector_store.py
ingestion/: embedder.py  ingest_pipeline.py  loader.py  main.py  splitter.py
ingestion/docs/: create_dummies.py  servicios.docx
tests/api/: test_routes.py
tests/applications/: test_llm_service.py
tests/domain/: test_models.py  test_services.py
tests/infrastructure/: test_llm_local.py  test_memory.py  test_vector_store.py
